--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.uid2</groupId>
     <artifactId>uid2-admin</artifactId>
-    <version>2.33.15-SNAPSHOT</version>
+    <version>2.33.0-ef4218bee0</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -16,7 +16,7 @@
         <!-- check micrometer.version vertx-micrometer-metrics consumes before bumping up -->
         <micrometer.version>1.1.0</micrometer.version>
         <junit-jupiter.version>5.7.0</junit-jupiter.version>
-        <uid2-shared.version>5.19.9-SNAPSHOT</uid2-shared.version>
+        <uid2-shared.version>5.20.0-87f9a4c580</uid2-shared.version>
         <image.version>${project.version}</image.version>
     </properties>
     <repositories>
