--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.uid2</groupId>
     <artifactId>uid2-admin</artifactId>
-    <version>5.0.0-ddadb5dc6b</version>
+    <version>5.0.15-SNAPSHOT</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -16,7 +16,7 @@
         <!-- check micrometer.version vertx-micrometer-metrics consumes before bumping up -->
         <micrometer.version>1.1.0</micrometer.version>
         <junit-jupiter.version>5.7.0</junit-jupiter.version>
-        <uid2-shared.version>6.0.0-c7abb59c26</uid2-shared.version>
+        <uid2-shared.version>7.4.0-5dea4369e6</uid2-shared.version>
         <okta-jwt.version>0.5.8</okta-jwt.version>
         <image.version>${project.version}</image.version>
     </properties>
