--- a/.github/workflows/check-stable-dependency.yaml
+++ b/.github/workflows/check-stable-dependency.yaml
@@ -3,7 +3,7 @@ on: [pull_request, workflow_dispatch]
 
 jobs:
   check_dependency:
-    uses: IABTechLab/uid2-shared-actions/.github/workflows/shared-check-stable-dependency.yaml@v2
+    uses: IABTechLab/uid2-shared-actions/.github/workflows/shared-check-stable-dependency.yaml@main
     secrets: inherit
 
 
