--- a/.github/workflows/release-docker-image.yaml
+++ b/.github/workflows/release-docker-image.yaml
@@ -12,9 +12,12 @@ on:
         - Patch
         - Snapshot
       vulnerability_severity:
-        description: The severity to fail the workflow if such vulnerability is detected. DO NOT override it unless a Jira ticket is raised. Must be one of ['CRITICAL', 'HIGH' or 'MEDIUM'].
-        type: string
-        default: 'HIGH'
+        description: The severity to fail the workflow if such vulnerability is detected. DO NOT override it unless a Jira ticket is raised.
+        type: choice
+        options:
+        - CRITICAL,HIGH
+        - CRITICAL,HIGH,MEDIUM
+        - CRITICAL (DO NOT use if JIRA ticket not raised)
 
 jobs:
   Image:
