--- a/.github/workflows/validate-image.yaml
+++ b/.github/workflows/validate-image.yaml
@@ -18,26 +18,9 @@ on:
     - cron: '0 20 * * *' #every day at 20:00
 
 jobs:
-  build-publish-docker-default:
+  build-publish-docker:
     uses: IABTechLab/uid2-shared-actions/.github/workflows/shared-validate-image.yaml@v2
     with: 
       failure_severity: ${{ inputs.failure_severity || 'CRITICAL,HIGH' }}
       fail_on_error: ${{ inputs.fail_on_error || true }}
-      cloud_provider: 'default'
     secrets: inherit
-  build-publish-docker-aws:
-    uses: IABTechLab/uid2-shared-actions/.github/workflows/shared-validate-image.yaml@v2
-    with: 
-      failure_severity: ${{ inputs.failure_severity || 'CRITICAL,HIGH' }}
-      fail_on_error: ${{ inputs.fail_on_error || true }}
-      cloud_provider: 'aws'
-    secrets: inherit
-    needs: [build-publish-docker-default]
-  build-publish-docker-gcp:
-    uses: IABTechLab/uid2-shared-actions/.github/workflows/shared-validate-image.yaml@v2
-    with: 
-      failure_severity: ${{ inputs.failure_severity || 'CRITICAL,HIGH' }}
-      fail_on_error: ${{ inputs.fail_on_error || true }}
-      cloud_provider: 'gcp'
-    secrets: inherit
-    needs: [build-publish-docker-aws]
