--- a/conf/local-config.json
+++ b/conf/local-config.json
@@ -16,6 +16,7 @@
   "enclaves_metadata_path": "enclaves/metadata.json",
   "partners_metadata_path": "partners/metadata.json",
   "keysets_metadata_path": "keysets/metadata.json",
+  "s3_keys_metadata_path": "s3encryption_keys/metadata.json",
   "admin_keysets_metadata_path": "admin_keysets/metadata.json",
   "keyset_keys_metadata_path": "keyset_keys/metadata.json",
   "aws_access_key_id": "no access key needed for test",
