--- a/conf/local-config.json
+++ b/conf/local-config.json
@@ -43,5 +43,7 @@
   "vertx_session_timeout": 32400000,
   "role_okta_group_map_maintainer": "developer",
   "role_okta_group_map_privileged": "developer",
-  "role_okta_group_map_super_user": "developer"
+  "role_okta_group_map_super_user": "developer",
+  "s3_key_activates_in_seconds": 86400,
+  "s3_key_count_per_site": 2
 }
