--- a/conf/local-config.json
+++ b/conf/local-config.json
@@ -18,6 +18,7 @@
   "keysets_metadata_path": "keysets/metadata.json",
   "admin_keysets_metadata_path": "admin_keysets/metadata.json",
   "keyset_keys_metadata_path": "keyset_keys/metadata.json",
+  "s3_keys_metadata_path": "s3encryption_keys/metadata.json",
   "aws_access_key_id": "no access key needed for test",
   "aws_secret_access_key": "no secret key needed for test",
   "client_side_keypair_public_prefix": "UID2-X-L-",
@@ -42,5 +43,7 @@
   "vertx_session_timeout": 32400000,
   "role_okta_group_map_maintainer": "developer",
   "role_okta_group_map_privileged": "developer",
-  "role_okta_group_map_super_user": "developer"
+  "role_okta_group_map_super_user": "developer",
+  "s3_key_activates_in_seconds": 86400,
+  "s3_key_count_per_site": 2
 }
