--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.uid2</groupId>
     <artifactId>uid2-admin</artifactId>
-    <version>7.14.0</version>
+    <version>5.9.8-alpha-77-SNAPSHOT</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -16,7 +16,7 @@
         <!-- check micrometer.version vertx-micrometer-metrics consumes before bumping up -->
         <micrometer.version>1.1.0</micrometer.version>
         <junit-jupiter.version>5.7.0</junit-jupiter.version>
-        <uid2-shared.version>7.13.5-alpha-111-SNAPSHOT</uid2-shared.version>
+        <uid2-shared.version>7.14.0</uid2-shared.version>
         <okta-jwt.version>0.5.8</okta-jwt.version>
         <image.version>${project.version}</image.version>
     </properties>
