--- a/conf/local-e2e-docker-config.json
+++ b/conf/local-e2e-docker-config.json
@@ -44,6 +44,6 @@
   "role_okta_group_map_maintainer": "developer",
   "role_okta_group_map_privileged": "developer",
   "role_okta_group_map_super_user": "developer",
-  "s3_key_activates_in_seconds": 86400,
-  "s3_key_count_per_site": 2
+  "cloud_encryption_key_activates_in_seconds": 86400,
+  "cloud_encryption_key_count_per_site": 2
 }
