--- a/pom.xml
+++ b/pom.xml
@@ -23,8 +23,9 @@
 
     <repositories>
         <repository>
-            <id>maven-snapshots</id>
-            <url>https://s01.oss.sonatype.org/content/repositories/snapshots/</url>
+            <name>Central Portal Snapshots</name>
+            <id>central-portal-snapshots</id>
+            <url>https://central.sonatype.com/repository/maven-snapshots/</url>
             <layout>default</layout>
             <releases>
                 <enabled>false</enabled>
