--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -3,7 +3,7 @@ on: [pull_request, push, workflow_dispatch]
 
 jobs:
   build:
-    uses: IABTechLab/uid2-shared-actions/.github/workflows/shared-build-and-test.yaml@v3
+    uses: IABTechLab/uid2-shared-actions/.github/workflows/shared-build-and-test.yaml@gdm-UID2-5565-salts-etl
     with:
       java_version: 21
     secrets: inherit
